<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout12"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.diagnose.HistoryDetailsFragment">

    <LinearLayout
        android:id="@+id/linearLayout71"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="289dp"
            android:layout_height="155dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/history_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/history_disease_name"
            style="@style/BoldHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/common_names"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/history_common_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/description"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/history_discription_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/demo_description" />

        <Button
            android:id="@+id/history_more_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/light_green_more_info"
            android:text="@string/more_info"
            android:textAllCaps="false"
            android:textColor="@color/primary_color_green"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_baseline_language_24"
            app:iconTint="@color/primary_color_green" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>